# Tahlkscribe

./: .gitignore  MANAGED-KEY-PLAN-ALLOTMENTS.md  MANAGED-KEY-PROXY-CONTRACT.md  MANAGED-KEY-ROLLOUT.md  README.md  ROADMAP.md  SETUP.md  group.html  package.json  solo.html
src/: entry-group.js  entry-solo.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: capabilities.js  specialties.js  storageBackend.js
src/editor/: noteEditor.js
src/export/: exportFormatter.js
src/group/: groupCapabilities.js
src/solo/: encounterPanel.js  homeScreen.js  onboarding.js  patients.js  patientsView.js  settingsModal.js  soloHeader.js  templatesView.js
src/templates/: templateLibrary.js
src/templates/data/: diabetic-foot-exam.json  podiatry-eval.json  podiatry-followup.json  podiatry-procedure.json
src/utils/: contentHash.js
styles/: solo.css
