[package]
name = "tahlk"
version = "0.1.0"
description = "Tahlk — ambient AI scribe for behavioral health"
authors = ["Tahlk"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tahlk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bundled SQLite — self-contained installer, no system lib needed.
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
parking_lot = "0.12"

# HTTP client for Anthropic API calls and Whisper model download.
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime — Tauri 2.x already uses tokio; this makes it explicit
# for our async commands.
tokio = { version = "1", features = ["full"] }

# Base64 for audio chunk transfers from JS → Rust.
base64 = "0.22"

# Stream utilities for chunked model download.
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
